Disable the Context Menu in the tab-modal signin dialog.

This prevents weird behaviors such as opening links in different profiles and unusable "view source" and "print" buttons.

BUG=622225,614680,602594
TEST=
1. Open the User Menu and click "sign in to Chrome"
2. In the sign in flow and the sync confirmation dialog, right-clicking to display the context menu shouldn't work.

Review-Url: https://codereview.chromium.org/2093563003
Cr-Commit-Position: refs/heads/master@{#402235}

Former-commit-id: dc9e2a6739335b0ad0ed16b8ffd08a68a96e6b2e